// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`affected-listed-buildings GET /add should render the add affected listed building page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add affected listed building</span>
            <h1             class="govuk-heading-l">Affected listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="affectedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="affectedListedBuilding" name="affectedListedBuilding" type="text" value=""
                            aria-describedby="affectedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings GET /add/check-and-confirm should render the add affected listed building check and confirm page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and add affected listed building</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Affected listed building</dt>
                    <dd                     class="govuk-summary-list__value"><a href="https://historicengland.org.uk/listing/the-list/list-entry/1234567"
                        class="govuk-link" target="_blank">1234567</a>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/lpa-questionnaire/1/affected-listed-buildings/add">Change<span class="govuk-visually-hidden"> listed building number</span></a>
                        </dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Add affected listed building</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings GET /change/:listedBuildingId should render the change listed building page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update affected listed building</span>
            <h1             class="govuk-heading-l">Affected listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="affectedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="affectedListedBuilding" name="affectedListedBuilding" type="text" value="1234567"
                            aria-describedby="affectedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings GET /change/:listedBuildingId/check-and-confirm should render the check and confirm page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and update affected listed building</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Affected listed building</dt>
                    <dd                     class="govuk-summary-list__value"><a href="https://historicengland.org.uk/listing/the-list/list-entry/1234567"
                        class="govuk-link" target="_blank">1234567</a>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/lpa-questionnaire/1/affected-listed-buildings/change/1">Change<span class="govuk-visually-hidden"> affected listed building</span></a>
                        </dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Update affected listed building</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings GET /remove/:listedBuildingId should render the remove affected listed building page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Confirm that you want to remove the affected listed building</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <p class="govuk-body"><a href="https://historicengland.org.uk/listing/the-list/list-entry/1234567"
                            class="govuk-link" target="_blank">1234567</a>
                        </p>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Remove affected listed building</button>
                    </form>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <p class="govuk-body"><a href="/appeals-service/appeal-details/1/lpa-questionnaire/1/affected-listed-buildings/manage"
                        class="govuk-link" target="_blank">Cancel</a>
                    </p>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings POST /add should re-render the add affected listed building page with an error when listed building contains a letter 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#affected-listed-building">Listed building entry number must be 7 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add affected listed building</span>
            <h1             class="govuk-heading-l">Affected listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="affectedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="affectedListedBuilding" name="affectedListedBuilding" type="text" value="A123456"
                            aria-describedby="affectedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings POST /add should re-render the add affected listed building page with an error when listed building contains a special character 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#affected-listed-building">Listed building entry number must be 7 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add affected listed building</span>
            <h1             class="govuk-heading-l">Affected listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="affectedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="affectedListedBuilding" name="affectedListedBuilding" type="text" value="*123456"
                            aria-describedby="affectedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings POST /add should re-render the add affected listed building page with an error when listed building is empty 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#affected-listed-building">Provide a listed building entry list number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add affected listed building</span>
            <h1             class="govuk-heading-l">Affected listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="affectedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="affectedListedBuilding" name="affectedListedBuilding" type="text" value=""
                            aria-describedby="affectedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings POST /add should re-render the add affected listed building page with an error when listed building is less than seven digits 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#affected-listed-building">Listed building entry number must be 7 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add affected listed building</span>
            <h1             class="govuk-heading-l">Affected listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="affectedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="affectedListedBuilding" name="affectedListedBuilding" type="text" value="12345"
                            aria-describedby="affectedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings POST /add should re-render the add affected listed building page with an error when listed building is more than seven digits 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#affected-listed-building">Listed building entry number must be 7 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add affected listed building</span>
            <h1             class="govuk-heading-l">Affected listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="affectedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="affectedListedBuilding" name="affectedListedBuilding" type="text" value="12345678"
                            aria-describedby="affectedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings POST /add should re-render the add affected listed building page with an error when listed building is seven digits but not in historic england 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#affected-listed-building">Enter a real listed building entry number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add affected listed building</span>
            <h1             class="govuk-heading-l">Affected listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="affectedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="affectedListedBuilding" name="affectedListedBuilding" type="text" value="9999999"
                            aria-describedby="affectedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings POST /change/:listedBuildingId should re-render the change affected listed building page with an error when listed building contains a letter 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#affected-listed-building">Listed building entry number must be 7 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update affected listed building</span>
            <h1             class="govuk-heading-l">Affected listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="affectedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="affectedListedBuilding" name="affectedListedBuilding" type="text" value="A123456"
                            aria-describedby="affectedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings POST /change/:listedBuildingId should re-render the change affected listed building page with an error when listed building contains a special character 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#affected-listed-building">Listed building entry number must be 7 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update affected listed building</span>
            <h1             class="govuk-heading-l">Affected listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="affectedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="affectedListedBuilding" name="affectedListedBuilding" type="text" value="*123456"
                            aria-describedby="affectedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings POST /change/:listedBuildingId should re-render the change affected listed building page with an error when listed building is less than seven digits 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#affected-listed-building">Listed building entry number must be 7 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update affected listed building</span>
            <h1             class="govuk-heading-l">Affected listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="affectedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="affectedListedBuilding" name="affectedListedBuilding" type="text" value="12345"
                            aria-describedby="affectedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings POST /change/:listedBuildingId should re-render the change affected listed building page with an error when listed building is more than seven digits 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#affected-listed-building">Listed building entry number must be 7 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update affected listed building</span>
            <h1             class="govuk-heading-l">Affected listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="affectedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="affectedListedBuilding" name="affectedListedBuilding" type="text" value="12345678"
                            aria-describedby="affectedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings POST /change/:listedBuildingId should re-render the change affected listed building page with an error when listed building is seven digits but not in historic england 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#affected-listed-building">Enter a real listed building entry number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update affected listed building</span>
            <h1             class="govuk-heading-l">Affected listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="affectedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="affectedListedBuilding" name="affectedListedBuilding" type="text" value="9999999"
                            aria-describedby="affectedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`affected-listed-buildings POST /change/:listedBuildingId should re-render the change listed building page when the listed building is empty 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#affected-listed-building">Provide a listed building entry list number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update affected listed building</span>
            <h1             class="govuk-heading-l">Affected listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="affectedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="affectedListedBuilding" name="affectedListedBuilding" type="text" value="1234567"
                            aria-describedby="affectedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
